# dota-watcher

./: .gitignore  last_event_id.txt  pyproject.toml
src/core/: notify_about_dota_match_command.py
src/details/: app_facotry.py  in_file_last_event_id_provider.py  players.py
src/details/chat/: event_chat.py  telegram_chat.py
src/details/dotabuff/: dotabuff_html_fetcher.py  dotabuff_row_parser.py  dotabuff_watcher.py
src/details/main/: main.py
src/details/ui/: event_presenter.py
test/: conftest.py
test/integrational/: test_dotabuff_watcher.py  test_in_file_last_event_id_provider.py  test_telegram_chat.py
test/mocs/: in_memory_last_event_id_provider.py  spy_chat.py  spy_event_watcher.py
test/system/: test_notify_about_dota_match_command.py
test/unit/: test_event_presenter.py  test_notify_about_dota_match_command.py
tmp/: event.txt  example.txt
